New binary: render as PNG
This expects a plant on stdin and write a 400x400 png image to stdout. A
name can be passed as the first argument.

--- a/L-seed.cabal
+++ b/L-seed.cabal
@@ -89,6 +89,12 @@ Executable runGarden
   if ! flag(RendererCairo)
     Buildable:    False
 
+Executable renderAsPNG
+  Main-Is:        renderAsPNG.hs
+  Hs-Source-Dirs: src/
+  if ! flag(RendererCairo)
+    Buildable:    False
+
 Executable validate
   Main-Is:        validate.hs
   Hs-Source-Dirs: src/
