--- a/doc/GPN-Intro/.gitignore
+++ b/doc/GPN-Intro/.gitignore
@@ -1,7 +1,7 @@
-Removing Intro.aux
-Removing Intro.log
-Removing Intro.nav
-Removing Intro.out
-Removing Intro.snm
-Removing Intro.toc
-Removing Intro.vrb
+Intro.aux
+Intro.log
+Intro.nav
+Intro.out
+Intro.snm
+Intro.toc
+Intro.vrb
